--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
-add_library(librankup SHARED "poker.cpp" "pattern.cpp")
+add_library(librankup SHARED "poker.cpp" "title.cpp" "pattern.cpp")
 set_target_properties( librankup
     PROPERTIES
     ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib"
