changed shared library to static

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,9 @@ project (RankUp)
 # Enable testing
 enable_testing(true)
 
-set(CMAKE_CXX_FLAGS "-std=c++17 -pthread -O3 -g -DNDEBUG -Wall -Wextra -fPIC -march=native ${CXX_EXTRA_FLAGS}")
+set(CMAKE_BUILD_TYPE Release)
 
+#set(CMAKE_CXX_FLAGS "-std=c++17 -pthread -O3 -g -DNDEBUG -fPIC -march=native")
+#set(CMAKE_CXX_FLAGS "-Wl,--out-implib")
 add_subdirectory(src)
 add_subdirectory(tests)
