--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.12)
 project (RankUp)
 
 # Enable testing
@@ -6,7 +6,6 @@ enable_testing(true)
 
 set(CMAKE_BUILD_TYPE Release)
 
-#set(CMAKE_CXX_FLAGS "-std=c++17 -pthread -O3 -g -DNDEBUG -fPIC -march=native")
+set(CMAKE_CXX_FLAGS "-std=c++14 -pthread -O3 -g -DNDEBUG -fPIC -march=native")
 #set(CMAKE_CXX_FLAGS "-Wl,--out-implib")
-add_subdirectory(src)
-# add_subdirectory(tests)
+add_subdirectory(rules)
